SIT-1954 Fixed layout bug in exam editor basic information tab.

--- a/app/assets/stylesheets/partial/_dashboard.scss
+++ b/app/assets/stylesheets/partial/_dashboard.scss
@@ -1135,13 +1135,6 @@
     padding-bottom: 50px;
     padding-left: 60px;
     margin-bottom: 30px;
-
-    &.fixed-height {
-      height: 1350px;
-    }
-    &.printout-height {
-      height: 1400px;
-    }
   }
 
   .exam-basic-title {
